--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,5 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 artifactory_username=admin
 artifactory_password=password
+android.useAndroidX=true
+android.enableJetifier=true
