--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -13,18 +13,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
-            android:screenOrientation="portrait">
+        <activity android:name=".RegistrationActivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".BarcodeFragmentTestActivity"
-            android:screenOrientation="portrait">
-        </activity>
+        <activity android:name=".BarcodeScanRegisterItemActivity" />
+        <activity
+            android:name=".ActivityMain"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".BarcodeScanActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".BarcodeFragmentTestActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
